[package]
name = "rusty_almonds"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
rayon = "1.5"
crossbeam = "0.8"
num_cpus = "1.13"
pixels = "0.12.1"

[profile.release]
lto = true
target-cpu = "native"